--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "OSU Capstone project. VIP-style RTS",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register tests/*.spec.ts"
   },
   "keywords": [
     "rts",
@@ -14,6 +14,25 @@
   "author": "Lucile Behmer, Howard Chen, Mark Ruoff",
   "license": "MIT",
   "dependencies": {
-    "phaser-ce": "^2.10.0"
+    "@types/chai": "^4.1.2",
+    "@types/es6-shim": "^0.31.35",
+    "@types/lodash": "^4.14.94",
+    "@types/mocha": "^2.2.47",
+    "chai": "^4.1.2",
+    "inversify": "^4.9.0",
+    "lodash": "^4.17.4",
+    "mocha": "^5.0.0",
+    "phaser-ce": "^2.10.0",
+    "reflect-metadata": "^0.1.12",
+    "rxjs-es": "^5.0.0-beta.12",
+    "sinon": "^4.2.1",
+    "ts-node": "^4.1.0",
+    "tslint": "^5.9.1",
+    "tslint-eslint-rules": "^4.1.1",
+    "typescript": "^2.6.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chenhowa/vip-hunt"
   }
 }
