--- a/package.json
+++ b/package.json
@@ -4,7 +4,20 @@
   "description": "OSU Capstone project. VIP-style RTS",
   "main": "main.js",
   "scripts": {
-    "test": "mocha -r ts-node/register tests/*.spec.ts"
+    "test": "nyc mocha -r ts-node/register tests/*.spec.ts"
+  },
+  "nyc": {
+    "extension": [
+        ".ts",
+        ".tsx"
+    ],
+    "exclude": [
+        "**/*.d.ts"
+    ],
+    "reporter": [
+        "html"
+    ],
+    "all": true
   },
   "keywords": [
     "rts",
@@ -22,10 +35,12 @@
     "inversify": "^4.9.0",
     "lodash": "^4.17.4",
     "mocha": "^5.0.0",
+    "nyc": "^11.4.1",
     "phaser-ce": "^2.10.0",
     "reflect-metadata": "^0.1.12",
     "rxjs-es": "^5.0.0-beta.12",
     "sinon": "^4.2.1",
+    "source-map-support": "^0.5.2",
     "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
     "tslint-eslint-rules": "^4.1.1",
