Added a test server command for running the game without save/load/new_game functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "types": ["refelct-metadata"],
         "module": "commonjs",
         "moduleResolution": "node",
-        "outDir": "dist",
+        "outDir": "dist/js",
         "removeComments": true,
         "noImplicitAny": true,
         "preserveConstEnums": true,
