--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc src/**/*.ts",
     "build:watch": "watch 'npm run build' ",
     "serve": "node dist/server.js",
-    "serve:watch": "nodemon 'npm run serve' "
+    "serve:watch": "nodemon 'npm run serve' ",
+    "serve:test": "http-server dist/html/"
   },
   "nyc": {
     "extension": [
@@ -37,6 +38,7 @@
     "@types/lodash": "^4.14.94",
     "@types/mocha": "^2.2.47",
     "chai": "^4.1.2",
+    "http-server": "^0.11.1",
     "inversify": "^4.9.0",
     "lodash": "^4.17.4",
     "mocha": "^5.0.0",
