--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "nyc mocha -r ts-node/register tests/*.spec.ts",
     "lint": "tslint src/**/*.ts",
-    "build": "npm run lint && tsc",
+    "build": "npm run lint && tsc && browserify ./dist/js/controller/main.js -o ./dist/js/bundle.js -d",
     "build:watch": "watch 'npm run build' ",
     "serve": "node dist/server.js",
     "serve:watch": "nodemon 'npm run serve' ",
-    "serve:test": "http-server dist"
+    "serve:test": "http-server dist -c-1"
   },
   "nyc": {
     "extension": [
@@ -44,7 +44,6 @@
     "mocha": "^5.0.0",
     "nodemon": "^1.14.11",
     "nyc": "^11.4.1",
-    "phaser-ce": "^2.10.0",
     "reflect-metadata": "^0.1.12",
     "rxjs-es": "^5.0.0-beta.12",
     "sinon": "^4.2.1",
@@ -59,6 +58,13 @@
     "url": "https://github.com/chenhowa/vip-hunt"
   },
   "devDependencies": {
+    "browserify": "^15.2.0",
+    "grunt": "^1.0.1",
     "tslint": "^5.9.1"
+  },
+  "browser": {
+    "p2": ".node_modules/phaser-ce/dist/p2.js",
+    "pixi": "./node_modules/phaser-ce/dist/pixi.js",
+    "phaser": "./node_modules/phaser-ce/dist/phaser.js"
   }
 }
