--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "sourceMap": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "baseUrl": "."
+        "baseUrl": ".",
+        "noImplicitUseStrict": true
     },
     "include": [
         "src/**/*"
