--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "nyc mocha -r ts-node/register tests/*.spec.ts",
     "lint": "tslint src/**/*.ts --fix",
+    "live-reload": "live-reload --port 8000 dist/",
     "build": "npm run lint && tsc && browserify ./dist/js/controller/main.js -o ./dist/js/bundle.js -d",
-    "build:watch": "watch 'tsc && browserify ./dist/js/controller/main.js -o ./dist/js/bundle.js -d' ",
-    "serve": "node dist/server.js",
-    "serve:watch": "nodemon 'npm run serve' ",
-    "serve:test": "http-server dist -c-1"
+    "build:watch": "npm run build && onchange 'src/**/*.ts' -- npm run build",
+    "serve": "http-server dist -c-1",
+    "serve:watch": "npm-run-all -p live-reload serve"
   },
   "nyc": {
     "extension": [
@@ -43,6 +43,7 @@
     "lodash": "^4.17.4",
     "mocha": "^5.0.0",
     "nodemon": "^1.14.11",
+    "npm-run-all": "^4.1.2",
     "nyc": "^11.4.1",
     "reflect-metadata": "^0.1.12",
     "rxjs-es": "^5.0.0-beta.12",
@@ -59,6 +60,8 @@
   },
   "devDependencies": {
     "browserify": "^15.2.0",
+    "live-reload": "^1.1.0",
+    "onchange": "^3.3.0",
     "tslint": "^5.9.1"
   }
 }
