--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "nyc mocha -r ts-node/register tests/*.spec.ts",
-    "lint": "tslint src/**/*.ts --fix",
+    "lint": "tslint src/**/*.ts",
     "live-reload": "live-reload --port 8000 dist/",
     "build": "npm run lint && tsc && browserify ./dist/js/controller/main.js -o ./dist/js/bundle.js -d",
     "build:watch": "npm run build && onchange 'src/**/*.ts' -- npm run build",
