Edited compiler options to avoid emiting javascript on compiler error

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "tslint src/**/*.ts",
     "lint:fix": "tslint src/**/*.ts --fix",
     "live-reload": "live-reload --port 8000 dist/",
-    "build": "npm run lint && tsc && browserify ./dist/js/controller/main.js -o ./dist/js/bundle.js -d",
+    "build": "tsc && browserify ./dist/js/controller/main.js -o ./dist/js/bundle.js -d",
     "build:watch": "npm run build && onchange 'src/**/*.ts' -- npm run build",
     "serve": "http-server dist -c-1",
     "serve:watch": "npm-run-all -p live-reload serve"
