--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ dist/js/model/*
 dist/js/controller/*
 dist/js/interfaces/*
 dist/js/bundle.*
-dist/js/inversify*
+dist/js/inversify.*
+dist/js/types.*
+dist/js/bindDependencies.*
 *~
