--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "nyc mocha -r ts-node/register tests/*.spec.ts",
     "lint": "tslint src/**/*.ts",
     "lint:fix": "tslint src/**/*.ts --fix",
-    "live-reload": "live-reload --port 8000 dist/",
+    "live-reload": "live-reload --port 8000 dist/js/bundle.js",
     "build": "tsc && browserify ./dist/js/controller/main.js -o ./dist/js/bundle.js -d",
     "build:watch": "npm run build && onchange 'src/**/*.ts' -- npm run build",
     "serve": "http-server dist -c-1",
